Add more tests for list object workspace counts at the server layer